# fastapi_template

./: .env_template  .gitignore  LICENSE  Makefile  README.md  app.env_template  app_db.env_template  db.env_template  docker-compose.yml  pyproject.toml  test_db.env_template
database_init/: 01_create_tables.sql  01_initialize_database._sql  02_create_users.sh
dockerfiles/: AppDockerfile  PostgreSQLDockerfile  PostgreSQLTestDockerfile
src/: prep_dev  requirements.txt  requirements_dev.txt
src/fastapi_template/: .dockerignore  __init__.py  adapters.py  config.py  core.py  database.py  exceptions.py  logic.py  main.py
src/fastapi_template/models/: database.py  input.py  internal.py  output.py
test_database_init/: 01_initialize_database.sql  02_create_users.sh
tests/: conftest.py  utils.py
tests/integration/: test_main.py
tests/unit/: test_adapters.py  test_core.py  test_database.py  test_logic.py
