[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template."
readme = "README.md"
authors = [
    { name = "Armando M. Baratti", email = "ambarjobs@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.1",
    "fastapi-cli>=0.0.20",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[project.scripts]
fastapi-template = "fastapi_template:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.isort]
line_length = 120
order_by_type = false
multi_line_output=3

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
